# jm_debug

./: .gitignore  CMakeLists.txt  README.md
.reuse/: dep5
example/: CMakeLists.txt
example/src/: CMakeLists.txt  main.cpp
include/jm/: debug_break.hpp  enum_class_formater.hpp  enum_class_formatter.hpp  except.hpp  log.hpp
src/: CMakeLists.txt  log.cpp
